--- a/src/main/resources/NewDokumentView.fxml
+++ b/src/main/resources/NewDokumentView.fxml
@@ -8,11 +8,11 @@
 
 <VBox prefHeight="838.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hr.foi.controller.NoviDokumentController">
    <children>
-      <TitledPane fx:id="potrebniArtikliTitledPane" animated="false" prefHeight="380.0" prefWidth="1024.0" text="Potrebni artikli">
+      <TitledPane fx:id="potrebniArtikliTitledPane" animated="false" prefHeight="350.0" prefWidth="1024.0" text="Potrebni artikli" VBox.vgrow="ALWAYS">
         <content>
-            <Pane prefHeight="418.0" prefWidth="1022.0">
+            <AnchorPane prefHeight="200.0" prefWidth="200.0">
                <children>
-                  <TableView fx:id="potrebniArtikliTableView" layoutX="22.0" layoutY="24.0" prefHeight="220.0" prefWidth="967.0">
+                  <TableView fx:id="potrebniArtikliTableView" prefHeight="193.0" prefWidth="967.0" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="15.0">
                     <columns>
                       <TableColumn fx:id="collPotrebniArtikl" prefWidth="135.0" text="Artikl" />
                       <TableColumn fx:id="collPotrebniArtiklKolicinaNaSkladistu" prefWidth="151.0" text="Količina na skladištu" />
@@ -22,16 +22,20 @@
                         <TableColumn fx:id="collPotrebniArtiklEkonomicnaKolicinaNarucivanja" prefWidth="240.0" text="Ekonomična količina naručivanja" />
                     </columns>
                   </TableView>
-                  <Button layoutX="22.0" layoutY="255.0" mnemonicParsing="false" onAction="#onKreirajPotrebniDokumentButtonClicked" text="Kreiraj Dokument" />
+                  <HBox prefHeight="10.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#onKreirajPotrebniDokumentButtonClicked" text="Kreiraj Dokument" />
+                     </children>
+                  </HBox>
                </children>
-            </Pane>
+            </AnchorPane>
         </content>
       </TitledPane>
-      <TitledPane fx:id="moguciArtikliTitledPane" animated="false" layoutY="399.0" prefHeight="440.0" prefWidth="1024.0" text="Mogući artikli">
+      <TitledPane fx:id="moguciArtikliTitledPane" animated="false" layoutY="399.0" prefHeight="350.0" prefWidth="1024.0" text="Mogući artikli" VBox.vgrow="ALWAYS">
          <content>
-            <Pane prefHeight="200.0" prefWidth="200.0">
+            <AnchorPane prefHeight="200.0" prefWidth="200.0">
                <children>
-                  <TableView fx:id="moguciArtikliTableView" layoutX="22.0" layoutY="29.0" prefHeight="267.0" prefWidth="971.0">
+                  <TableView fx:id="moguciArtikliTableView" layoutX="17.0" layoutY="14.0" prefHeight="196.0" prefWidth="971.0" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="15.0">
                      <columns>
                         <TableColumn fx:id="collMoguciArtikli" prefWidth="156.0" text="Artikl" />
                         <TableColumn fx:id="collMoguciArtikliKolicinaNaSkladistu" prefWidth="176.0" text="Količina na skladištu" />
@@ -40,9 +44,13 @@
                         <TableColumn fx:id="collMoguciArtikliCijenaSkladistenja" prefWidth="229.0" text="Cijena skladištenja" />
                      </columns>
                   </TableView>
-                  <Button layoutX="22.0" layoutY="311.0" mnemonicParsing="false" onAction="#onKreirajMoguciDokumentButtonClicked" text="Kreiraj Dokument" />
+                  <HBox prefHeight="20.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#onKreirajMoguciDokumentButtonClicked" text="Kreiraj Dokument" />
+                     </children>
+                  </HBox>
                </children>
-            </Pane>
+            </AnchorPane>
          </content>
       </TitledPane>
    </children>
