--- a/src/main/resources/SkladisteView.fxml
+++ b/src/main/resources/SkladisteView.fxml
@@ -19,16 +19,13 @@
             <TableColumn fx:id="collTroskoviNabave" prefWidth="140.0" text="Troškovi nabave" />
         </columns>
       </TableView>
-      <HBox prefHeight="50.0" prefWidth="1024.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <AnchorPane prefHeight="50.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <children>
-            <Button mnemonicParsing="false" onAction="#onIzmjeniButtonClicked" prefHeight="48.0" prefWidth="108.0" text="Izmjeni" />
-            <Button mnemonicParsing="false" onAction="#onNovoButtonClicked" prefHeight="48.0" prefWidth="108.0" text="Novi" />
-            <Button mnemonicParsing="false" onAction="#onObrisiButtonClicked" prefHeight="48.0" prefWidth="108.0" text="Obriši" />
-            <Button mnemonicParsing="false" onAction="#onPovijestButtonClicked" prefHeight="48.0" prefWidth="146.0" text="Pregledaj povijest">
-               <HBox.margin>
-                  <Insets left="500.0" />
-               </HBox.margin></Button>
+            <Button mnemonicParsing="false" onAction="#onIzmjeniButtonClicked" prefHeight="48.0" prefWidth="108.0" text="Izmjeni" AnchorPane.leftAnchor="0.0" />
+            <Button mnemonicParsing="false" onAction="#onNovoButtonClicked" prefHeight="48.0" prefWidth="108.0" text="Novi" AnchorPane.leftAnchor="110.0" />
+            <Button mnemonicParsing="false" onAction="#onObrisiButtonClicked" prefHeight="48.0" prefWidth="108.0" text="Obriši" AnchorPane.leftAnchor="220.0" />
+            <Button mnemonicParsing="false" onAction="#onPovijestButtonClicked" prefHeight="48.0" prefWidth="146.0" text="Pregledaj povijest" AnchorPane.rightAnchor="0.0" />
          </children>
-      </HBox>
+      </AnchorPane>
    </children>
 </AnchorPane>
